# src/shared/api/types/gen/strategyBriefResponse.ts
@@ -9,5 +9,6 @@
 export type StrategyBriefResponse = {
 	id: number;
 	name: string;
+	displayName: string;
 	description?: string;
 };
